fixed overflow

--- a/src/pages/MainPage/components/JourneySection/JourneySection.scss
+++ b/src/pages/MainPage/components/JourneySection/JourneySection.scss
@@ -5,6 +5,7 @@
 }
 
 .JourneySection {
+  overflow: hidden;
   padding: 0 98px 0 160px;
   margin-bottom: 104px;
   position: relative;
